# schedule_bot

./: .dockerignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
src/: bot.rs  db.rs  handler_tree.rs  handlers.rs  inline_keyboards.rs  main.rs  schedule.rs
src/db/: faculties.rs  get_faculties.rs  mod.rs
src/handlers/: default.rs  get_schedule.rs  mod.rs  schedule_handlers.rs  setup.rs
src/types/: mod.rs  schedule.rs
src/utils/: get_url.rs  mod.rs
tests/: test.rs
