[package]
name = "schedule_bot"
version = "0.4.0"
edition = "2024"

[dependencies]
tokio = { version =  "1.52.0", features = ["rt-multi-thread", "macros"] }
teloxide = { version = "0.17.0", features = ["macros"] }
dotenv = { version = "0.15.0" }
log = { version = "0.4" }
pretty_env_logger = { version = "0.5" }
sqlx = { version = "0.9", features = ["runtime-tokio", "tls-rustls", "postgres", "macros"] }
reqwest = { version = "0.13" }
scraper = { version = "0.27" }
chrono = "0.4.44"
